+++ version 4.2:
* translations: #3123 fixed: typo
* sms: #3116 fixed: crash during sending SMS (Vogel)

+++ version 4.1:
* pcspeaker: #3111 fixed: usage of __useconds_t type removed (Vogel)
* gui: #3109 fixed: crash in confiuguration window when selecting advanced chat options (Vogel)
* chat: #3108 fixed: invisible messasge when using Kadu chat renderer (Vogel)
* windows: #3112 fixed: open-chat-with may not work, depending on Windows GPU drivers (Vogel)
* notify: #3113 fixed: silent mode configuration option is lost after close (Vogel)

+++ version 4.0:
* jabber: #3106 fixed: adding existing gtalk account results in crash (Vogel)
* windows: #3070 fixed: Open Chat With work on Windows (Vogel)

+++ version 4.0-rc1:
* tabs: #3046 fixed: crash when switching between tabs and single_window (Vogel)
* translations: #3069 fixed: issues with menu translations (Vogel)
* history: #3092 fixed: crash in history window (Vogel)
* chat: #3091 fixed: keep indentation in messages (Vogel)
* gadu: #3101 fixed: save URL of received files in history (Vogel)
* chat: #3100 fixed: copying emoticons from chat view now works (Vogel)

+++ version 4.0-beta2
* gadu: #3072 fixed: always use encryption when available (Vogel)
* gadu: #2747 implemented: synchronize multi-session statuses (Vogel)
* sms: #3067 fixed: sending SMS messages to Orange (Vogel)
* windows: #2966 implemented: add recent conversation to task items of taskbar for Windows (Vogel)

+++ version 4.0-beta1
* chat: #3081 fixed: properly load conferences from configuration (Vogel)
* jabber: #3082 fixed: do not crash when accepting SSL certificate after some time (Vogel)
* windows: #2967 implemented: add status buttons to windows thumbnail toolbar (Vogel)

+++ version 4.0-alpha1
* amarok1_mediaplayer: plugin removed (Vogel)
* encryption_ng: plugin removed (Vogel)
* encryption_ng_simlite: plugin removed (Vogel)
* growl_notify: plugin removed (Vogel)
* history_migration: plugin removed (Vogel)